[package]
name = "atlas-vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
atlas-token = { path = "../token" }
atlas-oracle = { path = "../oracle" }
atlas-treasury = { path = "../treasury" }

[features]
testutils = ["soroban-sdk/testutils"]
